alignment issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,8 @@ body {
 
 #codeContainer {
   color: orange;
+  position: relative;
+
 }
 
 .d2h-code-linenumber {
@@ -118,4 +120,12 @@ body {
 
 .d2h-del {
   background: #841616;
+}
+.d2h-code-wrapper{
+position: absolute;
+width: 99%;
+  
+}
+.d2h-file-header{
+  display: none;
 }
